--- a/template-loja/ctrl-estoque.html
+++ b/template-loja/ctrl-estoque.html
@@ -29,37 +29,41 @@
       </tr>
 
       <tr>
-        <td><img src="./imagens/gremio.jpg" alt="Grêmio" /></td>
+        <td><img src="./imagens/gremio.jpg" width="300" alt="Grêmio" /></td>
         <td style="background-color: blue">Grêmio</td>
-        <td style="background-color: blue">R$259,90</td>
-        <td style="background-color: blue">(7)</td>
+        <td>R$259,90</td>
+        <td style="background-color: black; color: white">(7)</td>
       </tr>
 
       <tr>
-        <td><img src="./imagens/sao-paulo.jpg" alt="São Paulo" /></td>
+        <td>
+          <img src="./imagens/sao-paulo.jpg" width="300" alt="São Paulo" />
+        </td>
         <td>São Paulo</td>
         <td style="background-color: red">R$279,99</td>
-        <td>(9)</td>
+        <td style="background-color: black; color: white">(9)</td>
       </tr>
 
       <tr>
-        <td><img src="./imagens/flamengo.jpg" alt="Flamengo" /></td>
+        <td><img src="./imagens/flamengo.jpg" width="300" alt="Flamengo" /></td>
         <td style="background-color: red">Flamengo</td>
-        <td>R$179,99</td>
+        <td style="background-color: black; color: white">R$179,99</td>
         <td style="background-color: red">(4)</td>
       </tr>
 
       <tr>
-        <td><img src="./imagens/brasil.jpg" alt="Brasil" /></td>
+        <td><img src="./imagens/brasil.jpg" width="300" alt="Brasil" /></td>
         <td style="background-color: green">Brasil</td>
         <td style="background-color: yellow">R$199,99</td>
         <td style="background-color: blue">(15)</td>
       </tr>
       <tr>
-        <td><img src="./imagens/inter.jpg" alt="Internacional" /></td>
-        <td style="background-color: red">Internacional</td>
-        <td style="background-color: red">R$199,90</td>
-        <td style="background-color: red">(2)</td>
+        <td>
+          <img src="./imagens/inter.jpg" width="300" alt="Internacional" />
+        </td>
+        <td style="background-color: red; color: white">Internacional</td>
+        <td style="background-color: white; color: red">R$199,90</td>
+        <td style="background-color: red; color: white">(2)</td>
       </tr>
     </table>
   </body>
