--- a/semana3/bugfixes/exercicio-bugfixes/home.html
+++ b/semana3/bugfixes/exercicio-bugfixes/home.html
@@ -10,7 +10,7 @@
     <title>For Ever 4</title>
 </head>
 
-<body>
+<body class="capa">
     <h2>For Ever 4</h2>
     <div>
         <div class="container" id="container-de-descricao">
