centralizando texto da tabela

--- a/semana3/bugfixes/exercicio-bugfixes/comprar.html
+++ b/semana3/bugfixes/exercicio-bugfixes/comprar.html
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div>
-      <table>
+      <table class="texto-tabela">
         <tr>
           <td>
             <img
