--- a/semana3/bugfixes/exercicio-bugfixes/comprar.html
+++ b/semana3/bugfixes/exercicio-bugfixes/comprar.html
@@ -18,6 +18,7 @@
           class="icone"
           alt="Buscar"
         />
+        <img src="/exercicio-bugfixes/lupa.png" alt="lupa" class="lupa" />
       </div>
     </div>
     <div>
