--- a/semana3/bugfixes/exercicio-bugfixes/comprar.html
+++ b/semana3/bugfixes/exercicio-bugfixes/comprar.html
@@ -32,7 +32,7 @@
           </td>
           <td>Camisetas Básicas</td>
           <td>R$50,00</td>
-          <td><button>Comprar</button></td>
+          <td><button class="botao-diferente">Comprar</button></td>
         </tr>
         <tr>
           <td class="imagens-tamanho">
@@ -43,7 +43,7 @@
           </td>
           <td>Jeans</td>
           <td>R$80,00</td>
-          <td><button>Comprar</button></td>
+          <td><button class="botao-diferente">Comprar</button></td>
         </tr>
         <tr>
           <td class="imagens-tamanho">
@@ -54,7 +54,7 @@
           </td>
           <td>Chinelos</td>
           <td>R$20,00</td>
-          <td><button>Comprar</button></td>
+          <td><button class="botao-diferente">Comprar</button></td>
         </tr>
       </table>
     </div>
