--- a/semana3/portfolio/imagensProjetos.html
+++ b/semana3/portfolio/imagensProjetos.html
@@ -10,11 +10,11 @@
   <body class="fundo-azul">
     <h1>Leonardo Fernandes Martins</h1>
     <br />
-    <a href="home.html"><button class="botoes">Home</button></a>
-    <a href="quemSouEu.html"><button class="botoes">Quem sou eu?</button></a>
-    <a href="educacao.html"><button class="botoes">Educação</button></a>
-    <a href="projetos.html"><button class="botoes">Projetos</button></a>
-    <a href="contato.html"><button class="botoes">Contatos</button></a>
+    <a href="/index.html"><button class="botoes">Home</button></a>
+    <a href="/quemSouEu.html"><button class="botoes">Quem sou eu?</button></a>
+    <a href="/educacao.html"><button class="botoes">Educação</button></a>
+    <a href="/projetos.html"><button class="botoes">Projetos</button></a>
+    <a href="/contato.html"><button class="botoes">Contatos</button></a>
     <br />
     <h2>Fotos dos Projetos</h2>
     <br />
