--- a/semana3/portfolio/quemSouEu.html
+++ b/semana3/portfolio/quemSouEu.html
@@ -11,10 +11,10 @@
     <h1>Leonardo Fernandes Martins</h1>
     <br />
     <p>
-      <a href="home.html"><button class="botoes">Home</button></a>
-      <a href="educacao.html"><button class="botoes">Educação</button></a>
-      <a href="projetos.html"><button class="botoes">Projetos</button></a>
-      <a href="imagensProjetos.html"
+      <a href="/index.html"><button class="botoes">Home</button></a>
+      <a href="/educacao.html"><button class="botoes">Educação</button></a>
+      <a href="/projetos.html"><button class="botoes">Projetos</button></a>
+      <a href="/imagensProjetos.html"
       ><button class="botoes">Fotos Projetos</button></a
     >
       <a href="contato.html"><button class="botoes">Contato</button></a>
