--- a/semana3/portfolio/contato.html
+++ b/semana3/portfolio/contato.html
@@ -11,11 +11,11 @@
     <h1>Leonardo Fernandes Martins</h1>
     <br />
     <p>
-      <a href="home.html"><button class="botoes">Home</button></a>
-      <a href="quemSouEu.html"><button class="botoes">Quem sou eu?</button></a>
-      <a href="educacao.html"><button class="botoes">Educação</button></a>
-      <a href="projetos.html"><button class="botoes">Projetos</button></a>
-      <a href="imagensProjetos.html"
+      <a href="/index.html"><button class="botoes">Home</button></a>
+      <a href="/quemSouEu.html"><button class="botoes">Quem sou eu?</button></a>
+      <a href="/educacao.html"><button class="botoes">Educação</button></a>
+      <a href="/projetos.html"><button class="botoes">Projetos</button></a>
+      <a href="/imagensProjetos.html"
         ><button class="botoes">Fotos Projetos</button></a
       >
     </p>
