--- a/semana3/portfolio/contato.html
+++ b/semana3/portfolio/contato.html
@@ -60,6 +60,7 @@
       <input type="text" id="nome" placeholder="Nome" name="nome" />
       <input type="text" id="email" placeholder="E-mail" name="email" />
       <input type="text" id="texto" placeholder="Texto" name="texto" />
+      <button class="botoes">Enviar</button>
     </div>
   </body>
 </html>
